🎨 feat: adicionar certificacao scrum

--- a/index.html
+++ b/index.html
@@ -425,6 +425,19 @@
                         <p>Formação com foco em gestão de negócios e processos.</p>
                     </div>
                 </div>
+
+                <div class="education-item">
+                    <div class="education-icon">
+                        <i class="fas fa-certificate"></i>
+                    </div>
+                    <div class="education-content">
+                        <h3>Scrum Fundamentals Certified (SFC™)</h3>
+                        <h4>SCRUMstudy</h4>
+                        <span>Abril 2025</span>
+                        <p>Certificação em metodologias ágeis para gestão de projetos e entregas iterativas.</p>
+                        <a href="assets/pdf/ScrumFundamentalsCertified-LeieneNeves-1074591.pdf" target="_blank" class="cert-link">Ver certificado</a>
+                    </div>
+                </div>
                 
                 <div class="education-item">
                     <div class="education-icon">
