🎨 feat: adicionando certificacoes

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 </ul>
             </nav>
             <a href="assets/pdf/CV_LEIENE_NEVES.pdf" download class="btn">Download CV</a>
+            <a href="#education" class="scrum-badge">
+                <img src="assets/images/scrum-badge.png" alt="Certificação Scrum" width="30">
+            </a>
         </div>
     </header>
 
@@ -33,7 +36,7 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="content">
-                <h1>Olá, eu sou <span>Leiene Neves</span></h1>
+                <h1>Prazer, me chamo <span>Leiene Neves</span></h1>
                 <div class="typing-container">
                     <span id="typing-text"></span>
                     <span class="cursor">|</span>
@@ -291,8 +294,9 @@
                         <h4>Desenvolvedora - Soluções de RPA e Automação</h4>
                         <ul>
                             <li>Liderança em projetos de automação que reduziram tempo de processos em 75%</li>
+                            <li>Aplicação de práticas Scrum para gerenciar sprints de automação, com entregas semanais de MVP e revisões de backlog.</li>
                             <li>Implementação de algoritmos de análise preditiva</li>
-                            <li>Desenvolvimento de dashboards interativos</li>
+                            <li>Desenvolvimento de automações robóticas via códigos</li>
                         </ul>
                         <div class="tech-used">
                             <span>Python</span>
@@ -347,6 +351,19 @@
         <div class="container">
             <h2 class="section-title">Meus <span>Projetos</span></h2>
             <div class="projects-grid">
+                <a href="https://rpa-consulta-cnpj.onrender.com" target="_blank" class="project-card-link">
+                    <div class="project-card">
+                        <img src="assets/images/rpa-cnpj-demo.jpg" alt="Automação de Consulta CNPJ">
+                        <div class="overlay">
+                            <h3>Consulta Automatizada de CNPJ</h3>
+                            <p>Python, Selenium, Web Scraping</p>
+                            <div class="links">
+                                <span>Redução de 15min para 30s/consulta</span>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
                 <div class="project-card">
                     <img src="assets/images/automacao-conciliacao.jpg" alt="Automação de Conciliação Bancária">
                     <div class="overlay">
@@ -410,7 +427,6 @@
                         <h3>MBA em Engenharia de Software</h3>
                         <h4>USP/ESALQ</h4>
                         <span>2024 - Presente</span>
-                        <p>Ênfase em gestão de produtos, transformação digital e melhoria contínua.</p>
                     </div>
                 </div>
                 
@@ -422,7 +438,6 @@
                         <h3>Bacharelado em Administração</h3>
                         <h4>Universidade Federal de Sergipe</h4>
                         <span>2019 - 2024</span>
-                        <p>Formação com foco em gestão de negócios e processos.</p>
                     </div>
                 </div>
 
@@ -433,9 +448,8 @@
                     <div class="education-content">
                         <h3>Scrum Fundamentals Certified (SFC™)</h3>
                         <h4>SCRUMstudy</h4>
-                        <span>Abril 2025</span>
+                        <span>2025</span>
                         <p>Certificação em metodologias ágeis para gestão de projetos e entregas iterativas.</p>
-                        <a href="assets/pdf/ScrumFundamentalsCertified-LeieneNeves-1074591.pdf" target="_blank" class="cert-link">Ver certificado</a>
                     </div>
                 </div>
                 
