🎨 feat: ajustando design das pages dos projetos

--- a/projetos/web-scraping/index.html
+++ b/projetos/web-scraping/index.html
@@ -68,7 +68,9 @@
     </main>
 
     <footer>
-        <!-- Footer padrão -->
+        <div class="container">
+            <p>&copy; <span id="year"></span> Leiene Neves. Todos os direitos reservados.</p>
+        </div>
     </footer>
 </body>
 </html>
