--- a/projetos/workflow-credito/index.html
+++ b/projetos/workflow-credito/index.html
@@ -68,7 +68,9 @@
     </main>
 
     <footer>
-        <!-- Footer igual aos anteriores -->
+        <div class="container">
+            <p>&copy; <span id="year"></span> Leiene Neves. Todos os direitos reservados.</p>
+        </div>
     </footer>
 </body>
 </html>
