--- a/projetos/automacao-conciliacao/index.html
+++ b/projetos/automacao-conciliacao/index.html
@@ -1,106 +1,195 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Automação de Conciliação Bancária | Leiene Neves</title>
-    <link rel="stylesheet" href="../../style.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Automação de Conciliação | Leiene Neves</title>
+  <link rel="stylesheet" href="../../style.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
 </head>
 <body>
-    <!-- Header -->
-    <header>
-        <div class="container">
-            <a href="../../index.html" class="logo-link">
-                <img class="logo" src="../../assets/images/logo.png" alt="Voltar ao portfólio">
-            </a>
-            <nav>
-                <ul>
-                    <li><a href="../../index.html#projects">Voltar aos Projetos</a></li>
-                </ul>
-            </nav>
+
+<header>
+  <div class="container">
+    <a href="../../index.html" class="logo-link">
+      <img class="logo" src="../../assets/images/logo.png" alt="Voltar ao portfólio">
+    </a>
+    <nav>
+      <ul>
+        <li><a href="../../index.html#projects">Voltar aos Projetos</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
+
+<main class="project-detail">
+  <div class="container">
+    <h1>Automação de Conciliação Financeira</h1>
+
+    <div class="project-meta">
+      <span class="tech">HTML</span>
+      <span class="tech">JavaScript</span>
+      <span class="tech">PapaParse</span>
+      <a href="#" class="btn disabled">Demo Interna</a>
+      <a href="LINK_GITHUB" target="_blank" class="btn secondary">Código no GitHub</a>
+    </div>
+
+    <div class="project-content">
+      <section class="project-overview">
+        <h2><i class="fas fa-search"></i> Visão Geral</h2>
+        <p>Ferramenta web para conciliação rápida entre lançamentos bancários e registros internos. Permite importar planilhas (.csv), comparar registros e exportar um relatório de conciliação.</p>
+
+        <div class="results-grid">
+          <div class="result-card">
+            <i class="fas fa-file-csv"></i>
+            <strong>Importação</strong>
+            <p>de CSVs</p>
+          </div>
+          <div class="result-card">
+            <i class="fas fa-balance-scale"></i>
+            <strong>Conciliação</strong>
+            <p>Data + Valor</p>
+          </div>
+          <div class="result-card">
+            <i class="fas fa-download"></i>
+            <strong>Relatório</strong>
+            <p>para download</p>
+          </div>
         </div>
-    </header>
+      </section>
 
-    <!-- Conteúdo do Projeto -->
-    <main class="project-detail">
-        <div class="container">
-            <h1>Automação de Conciliação Bancária</h1>
-            
-            <div class="project-meta">
-                <span class="tech">Python</span>
-                <span class="tech">Selenium</span>
-                <span class="tech">SQL</span>
-                <span class="tech">Power BI</span>
-                <a href="#" class="btn disabled">Demo Interna</a>
-                <a href="https://github.com/htmleiene/automacao-conciliacao" target="_blank" class="btn secondary">Código no GitHub</a>
-            </div>
+      <section class="project-screenshots">
+        <h2><i class="fas fa-play"></i> Teste a Conciliação</h2>
+        <div class="reconciliation-tool">
+          <div class="file-input">
+            <label><strong>Importar Lançamentos Bancários (.csv):</strong></label><br>
+            <input type="file" id="bancoFile" accept=".csv">
+          </div>
 
-            <div class="project-content">
-                <section class="project-overview">
-                    <h2><i class="fas fa-search"></i> Visão Geral</h2>
-                    <p>Sistema RPA que automatiza a conciliação de transações bancárias entre sistemas financeiros, substituindo planilhas manuais e reduzindo erros operacionais.</p>
-                    <div class="results-grid">
-                        <div class="result-card">
-                            <i class="fas fa-clock"></i>
-                            <strong>8h → 2h</strong>
-                            <p>tempo diário</p>
-                        </div>
-                        <div class="result-card">
-                            <i class="fas fa-bug"></i>
-                            <strong>90%</strong>
-                            <p>redução de erros</p>
-                        </div>
-                        <div class="result-card">
-                            <i class="fas fa-database"></i>
-                            <strong>15+</strong>
-                            <p>processos otimizados</p>
-                        </div>
-                    </div>
-                </section>
+          <div class="file-input">
+            <label><strong>Importar Registros Internos (.csv):</strong></label><br>
+            <input type="file" id="internoFile" accept=".csv">
+          </div>
 
-                <section class="project-screenshots">
-                    <h2><i class="fas fa-image"></i> Fluxo da Solução</h2>
-                    <div class="gallery">
-                        <img src="assets/screens/fluxo-conciliacao.png" alt="Diagrama do fluxo de automação">
-                        <img src="assets/screens/dashboard-conciliacao.png" alt="Dashboard de monitoramento">
-                    </div>
-                </section>
+          <button onclick="conciliar()">Conciliar Arquivos</button>
+          <button onclick="baixarRelatorio()">Baixar Relatório (.csv)</button>
 
-                <section class="project-challenges">
-                    <h2><i class="fas fa-puzzle-piece"></i> Desafios e Soluções</h2>
-                    <ul>
-                        <li>
-                            <strong>Problema:</strong> Dados bancários em formatos inconsistentes (CSV, PDF, APIs).<br>
-                            <strong>Solução:</strong> Desenvolvimento de um parser universal com Python e Pandas.
-                        </li>
-                        <li>
-                            <strong>Problema:</strong> Lentidão na consulta de transações históricas.<br>
-                            <strong>Solução:</strong> Criação de um cache em banco SQLite com indexação inteligente.
-                        </li>
-                    </ul>
-                </section>
-
-                <section class="project-architecture">
-                    <h2><i class="fas fa-project-diagram"></i> Arquitetura</h2>
-                    <div class="architecture-diagram">
-                        <img src="assets/screens/arquitetura.png" alt="Diagrama de arquitetura">
-                        <ul>
-                            <li><i class="fas fa-circle"></i> <strong>Extrator:</strong> Robô Python/Selenium para coletar dados</li>
-                            <li><i class="fas fa-circle"></i> <strong>Transformador:</strong> Scripts SQL/Pandas para tratamento</li>
-                            <li><i class="fas fa-circle"></i> <strong>Loader:</strong> Power BI para visualização</li>
-                        </ul>
-                    </div>
-                </section>
-            </div>
+          <div class="results" id="resultado">
+            <h3>Resultado:</h3>
+            <ul id="listaResultado">
+              <li>Aguardando importação e conciliação...</li>
+            </ul>
+          </div>
         </div>
-    </main>
+      </section>
 
-    <footer>
-        <div class="container">
-            <p>&copy; <span id="year"></span> Leiene Neves. Todos os direitos reservados.</p>
-        </div>
-    </footer>
+      <section class="project-challenges">
+        <h2><i class="fas fa-puzzle-piece"></i> Desafios Técnicos</h2>
+        <ul>
+          <li>
+            <strong>Problema:</strong> Diferentes formatações nos arquivos.<br>
+            <strong>Solução:</strong> Normalização automática com PapaParse.
+          </li>
+          <li>
+            <strong>Problema:</strong> Conciliação manual demorada.<br>
+            <strong>Solução:</strong> Automatização do cruzamento Data + Valor.
+          </li>
+        </ul>
+      </section>
+    </div>
+  </div>
+</main>
+
+<footer>
+  <div class="container">
+    <p>&copy; <span id="year"></span> Leiene Neves. Todos os direitos reservados.</p>
+  </div>
+</footer>
+
+<script>
+let dadosBanco = [];
+let dadosInterno = [];
+let resultadoConsolidado = [];
+
+document.getElementById('bancoFile').addEventListener('change', function(event) {
+  Papa.parse(event.target.files[0], {
+    header: true,
+    skipEmptyLines: true,
+    complete: function(results) {
+      dadosBanco = results.data;
+    }
+  });
+});
+
+document.getElementById('internoFile').addEventListener('change', function(event) {
+  Papa.parse(event.target.files[0], {
+    header: true,
+    skipEmptyLines: true,
+    complete: function(results) {
+      dadosInterno = results.data;
+    }
+  });
+});
+
+function conciliar() {
+  const listaResultado = document.getElementById('listaResultado');
+  listaResultado.innerHTML = "";
+  resultadoConsolidado = [];
+
+  if (dadosBanco.length === 0 || dadosInterno.length === 0) {
+    alert("Importe ambos os arquivos para fazer a conciliação!");
+    return;
+  }
+
+  dadosBanco.forEach(lancamento => {
+    const encontrado = dadosInterno.find(registro => 
+      registro.Data === lancamento.Data && 
+      parseFloat(registro.Valor.replace(",", ".")) === parseFloat(lancamento.Valor.replace(",", "."))
+    );
+
+    const status = encontrado ? "Conciliado" : "Não conciliado";
+
+    resultadoConsolidado.push({
+      Data: lancamento.Data,
+      Valor: lancamento.Valor,
+      Descrição: lancamento.Descrição,
+      Status: status
+    });
+
+    const li = document.createElement('li');
+    li.innerHTML = encontrado 
+      ? `✅ Conciliado: <strong>${lancamento.Descrição}</strong> (${lancamento.Data} - R$${lancamento.Valor})`
+      : `⚠️ Não conciliado: <strong>${lancamento.Descrição}</strong> (${lancamento.Data} - R$${lancamento.Valor})`;
+    listaResultado.appendChild(li);
+  });
+}
+
+function baixarRelatorio() {
+  if (resultadoConsolidado.length === 0) {
+    alert("Realize a conciliação antes de baixar o relatório!");
+    return;
+  }
+
+  const csv = Papa.unparse(resultadoConsolidado);
+
+  const blob = new Blob([csv], { type: 'text/csv;charset=utf-8;' });
+  const url = URL.createObjectURL(blob);
+
+  const link = document.createElement('a');
+  link.setAttribute('href', url);
+  link.setAttribute('download', 'relatorio_conciliacao.csv');
+  document.body.appendChild(link);
+  link.click();
+  document.body.removeChild(link);
+}
+</script>
+
+<script>
+  // Atualizar o ano automaticamente
+  document.getElementById("year").textContent = new Date().getFullYear();
+</script>
+
 </body>
 </html>
