--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <img class="logo" src="assets/images/logo.png" alt="Leiene Neves - Software Developer">
             </a>
             <nav>
+                <button class="menu-toggle" onclick="toggleMenu()">☰</button>
                 <ul>
                     <li><a href="#home">Início</a></li>
                     <li><a href="#about">Sobre</a></li>
