--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img class="logo" src="assets/images/logo.png" alt="Leiene Neves - Software Developer">
             </a>
             <nav>
-                <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+            <button class="menu-toggle" onclick="toggleMenu()">☰</button>
                 <ul>
                     <li><a href="#home">Início</a></li>
                     <li><a href="#about">Sobre</a></li>
@@ -500,6 +500,11 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js">
+            function toggleMenu() {
+            const navList = document.getElementById('nav-list');
+            navList.classList.toggle('active');
+        }
+    </script>
 </body>
 </html>
