🔧 refactor: mudança na lógica do formulário de contato

--- a/index.html
+++ b/index.html
@@ -478,6 +478,7 @@
                 <form id="contact-form" class="contact-form">
                     <input type="text" name="user_name" placeholder="Seu Nome" required>
                     <input type="email" name="user_email" placeholder="Seu Email" required>
+                    <input type="text" name="subject" placeholder="Assunto">
                     <textarea name="message" placeholder="Sua Mensagem" required></textarea>
                     <button type="submit" class="btn">Enviar Mensagem</button>
                 </form>
