--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                 </a>
                 <a href="projetos/orquestrador/index.html" class="project-card-link">
                     <div class="project-card">
-                        <img src="assets/images/orquestrador.jpg" alt="Orquestrador de Robôs">
+                        <img src="assets/images/orquestrador.png" alt="Orquestrador de Robôs">
                         <div class="overlay">
                             <h3>Orquestrador de Robôs</h3>
                             <p>Python, Flask, Gerenciamento de Robôs</p> 
