🐛 fix: correcao de bugs no envio do form de contato

--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                 document.getElementById("contact-form").addEventListener("submit", function(e) {
                     e.preventDefault();
                 
-                    emailjs.sendForm("service_kdcfo9q", "template_b4lg9j9", this)
+                    emailjs.sendForm("service_4cl3lg8", "template_vg2vcwk", this)
                         .then(function(response) {
                             alert("Mensagem enviada com sucesso!");
                         }, function(error) {
